# ptm

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
.codex/: config.toml
.codex/rules/: default.rules
.github/workflows/: ci.yml
docs/: config-structure-and-platform-resolution.md
src/ptm/: cleaner.py  commands.py  config.py  installer.py  main.py  models.py  package_managers.py  resolver.py  store.py
tests/: test_cleaner.py  test_commands.py  test_config.py  test_installer.py  test_models.py  test_package_managers.py  test_resolver.py  test_store.py
