[project]
name = "ptm"
version = "0.1.0"
description = "CLI tool manager - install and update tools via GitHub Releases or official installers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
ptm = "ptm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptm"]
