[project]
name = "ptm"
version = "0.1.0"
description = "CLI tool manager - install and update tools via GitHub Releases or official installers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
ptm = "ptm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptm"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade (Python構文の近代化)
    "B",   # flake8-bugbear (バグになりやすいパターン)
    "SIM", # flake8-simplify (冗長なコードの簡略化)
    "RUF", # Ruff固有ルール
]
